# jarvies-mcp

./: .env.example  .gitignore  README_MCP.md  pyproject.toml
.config/: clickup_fields.json
agents/: __init__.py
agents/mcp/: __init__.py  admin.py  admin_consent.py  auth.py  config.py  credentials.py  database.py  integrations.py  oauth.py  permissions.py  proxy.py  server.py  tenant.py  tenant_context.py  tool_registry.py
agents/mcp/tools/: cin7_tools.py  clickup_tools.py  clickup_write_tools.py  db_tools.py  finance_tools.py  freshsales_tools.py  freshsales_write_tools.py  m365_mail_folder_tools.py  m365_tools.py  m365_write_tools.py  powerbi_tools.py  xero_tools.py
deploy/: DEPLOY_APPRUNNER.md  DEPLOY_ECS.md  apprunner.mcp.yaml
docker/: Dockerfile.mcp
scripts/: generate_mcp_api_key.ps1  migrate.py  setup_clickup_fields.py  smoke_live.py  xero_auth_setup.py
tests/: test_admin.py  test_admin_consent.py  test_cin7_tools.py  test_clickup_tools.py  test_clickup_write_tools.py  test_credentials.py  test_database.py  test_freshsales_tools.py  test_freshsales_write_tools.py  test_m365_mail_folder_tools.py  test_m365_write_tools.py  test_mcp_tools.py  test_oauth.py  test_proxy.py  test_transport_security.py  test_xero_tools.py
